# casaware_exercise

./: 00-contratos-compartidos.md  01-backend-fastapi.md  02-frontend-nextjs.md  03-orquestacion-exoclaw-temporal.md  03-orquestacion-temporal.md  04-cdc-ingestion.md  05-medallion-databricks.md  06-consultas-seguimiento.md  07-tablero-ops-atlas-charts.md  08-trace-dashboard-origen-datos.md  10-autenticacion-autorizacion-tenant.md
.github/workflows/: build-and-push.yml  databricks-deploy.yml  terraform.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.fake.yml  pyproject.toml
backend/scripts/: gen_test_jwt.py
backend/src/nexus_backend/: config.py  errors.py  main.py  ulid_ids.py
backend/src/nexus_backend/api/: health.py
backend/src/nexus_backend/api/v1/: chat.py  dev.py  events.py  expenses.py  hitl.py  router.py  workflows.py
backend/src/nexus_backend/auth/: cognito.py  dependencies.py  models.py
backend/src/nexus_backend/observability/: logging.py  metrics.py  otel.py  xray.py
backend/src/nexus_backend/schemas/: chat.py  events.py  expense.py  hitl.py  workflow.py
backend/src/nexus_backend/services/: mongodb.py  redis_client.py  s3.py  sse_broker.py  temporal_client.py
backend/tests/: conftest.py
backend/tests/fakes/: fake_cognito.py  fake_temporal.py
debezium-image/: .gitignore  Dockerfile
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/app/(auth)/: layout.tsx  page.tsx
frontend/src/app/(auth)/chat/: page.tsx
frontend/src/app/(auth)/expenses/: page.tsx
frontend/src/app/(auth)/expenses/[id]/: page.tsx
frontend/src/app/(auth)/expenses/new/: page.tsx
frontend/src/app/auth/callback/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/chat/: CitationChip.tsx
frontend/src/components/shell/: shell.tsx
frontend/src/lib/api/: client.ts
frontend/src/lib/auth/: amplify-config.ts  dev-token.ts  use-auth.ts
frontend/src/lib/schemas/: events.ts
frontend/src/lib/sse/: event-source.ts  use-sse-events.ts
frontend/src/stores/: sse-store.ts
infra/: README.md
infra/plans/: README.md  fix-hitl-ocr-propagation.md  phase-a-tecnologias.md  phase-a.md  phase-b-plus-plus-plus-architecture.md  phase-b-plus-runbook.md  phase-b-plus.md  phase-b-postmortem.md  phase-b.md  phase-c.md  phase-d-hybrid-agentic-rag.md  phase-d-runbook.md  phase-e-breadcrumb-dashboard.md  phase-e-runbook.md
infra/terraform/: .gitignore  .terraform.lock.hcl  README.md  acm.tf  alb.tf  bedrock_dashboard.tf  bedrock_logging.tf  cdc.tf  cloudwatch.tf  cognito.tf  dash-agent.plan  dash.plan  dashboards.tf  databricks.tf  databricks_msk.tf  databricks_ncc.tf  debezium.tf  ecr.tf  ecs_backend.tf  ecs_cluster.tf  ecs_frontend.tf  ecs_workers.tf  elasticache.tf  iam_github_oidc.tf  iam_worker.tf  msk.tf  msk_privatelink.tf  network.tf  outputs.tf  phase-e.plan  phase-e5d.plan  phase-e6.plan  providers.tf  route_drift_alarm.tf  route_self_heal.tf  s3.tf  secrets.tf  security_groups.tf  variables.tf  versions.tf  (+2 more)
mds/: 09-flujo-end-to-end-detallado.md  12-auditoria-multitenant-end-to-end.md
mds/RAG/: rag-chunking-vectorizado-explicado.md
mds/medallion/: 11-incidente-hitl-no-llega-a-gold.md  12-delta-merge-concurrencia-y-parquet.md  13-pipeline-modes-y-escalamiento.md
nexus-cdc/: .env.example  Dockerfile  README.md  pyproject.toml
nexus-cdc/src/nexus_cdc/: __init__.py  batcher.py  checkpoint.py  config.py  listener.py  main.py  mappers.py  observability.py
nexus-cdc/tests/: test_batcher.py  test_mappers.py
nexus-medallion/: .gitignore  README.md  databricks.yml  pyproject.toml
nexus-medallion/dashboards/: build_breadcrumb.py  build_minimal.py  build_trace.py  nexus-breadcrumb.lvdash.json  nexus-expense-trace.lvdash.json  nexus-medallion-trace.lvdash.json  nexus-pipeline-obs.lvdash.json
nexus-medallion/resources/jobs/: cdc_refresh.yml  seed_bronze.yml  vector_setup.yml
nexus-medallion/resources/pipelines/: bronze_cdc.yml  gold.yml  silver.yml
nexus-medallion/src/bronze/: cdc_expense_events.py  cdc_expenses.py  cdc_hitl_tasks.py  cdc_ocr_extractions.py  cdc_receipts.py
nexus-medallion/src/common/: schemas.py
nexus-medallion/src/gold/: expense_audit.py  expense_chunks.py
nexus-medallion/src/seed/: seed_bronze_from_mongo.py
nexus-medallion/src/silver/: expense_events.py  expenses.py  hitl_discrepancies.py  hitl_events.py  ocr_extractions.py
nexus-medallion/src/vector/: setup_vector_search.py
nexus-orchestration/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.workers.yml  pyproject.toml
nexus-orchestration/scripts/: bootstrap_local_vector.py  force_revectorize_expense.py  inspect_vectorized_expense.py  setup_vector_search.py  wait_and_provision_index.py
nexus-orchestration/src/nexus_orchestration/: config.py  main_worker.py  ulid_ids.py
nexus-orchestration/src/nexus_orchestration/activities/: _fakes.py  comparison.py  llm.py  mongodb_writes.py  query_expense.py  redis_events.py  sql_search.py  sync_vector.py  textract.py  vector_search.py
nexus-orchestration/src/nexus_orchestration/observability/: logging.py  otel.py  rag_metrics.py
nexus-orchestration/src/nexus_orchestration/prompts/: rag_system.md
nexus-orchestration/src/nexus_orchestration/schemas/: events.py  inputs.py
nexus-orchestration/src/nexus_orchestration/tools/: search_expenses.py  search_expenses_structured.py
nexus-orchestration/src/nexus_orchestration/workflows/: audit_validation.py  expense_audit.py  ocr_extraction.py  rag_query.py
nexus-orchestration/tests/integration/: test_contract_schemas.py
nexus-orchestration/tests/unit/: test_citation_normalizer.py  test_compare_fields.py  test_sql_search_builder.py  test_sql_search_tenant_isolation.py
nexus-orchestration/tests/workflows/: test_expense_audit.py  test_rag_hybrid.py
scripts/: backfill-phase-b-plus-fixes.js  kafka-watch.sh  recover-vector-sync-rejected.js  recreate-vs-index.py  reset-environment.py
(+1 files in other folders)
