[project]
name = "nexus-orchestration"
version = "0.1.0"
description = "Nexus Temporal workers — orchestrates expense audit and RAG chatbot workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.8",
    "motor>=3.5",
    "redis>=5.0",
    "python-ulid>=3.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "rapidfuzz>=3.9",
    "boto3>=1.34",
    # Phase C: Vector Search is opt-in at runtime via FAKE_VECTOR_SEARCH=false.
    # Keep at runtime so the image ships ready to flip without rebuild.
    "databricks-vectorsearch>=0.50",
]

[project.optional-dependencies]
prod = [
    "databricks-sql-connector>=3.3",
    "anthropic>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mongomock-motor>=0.0.30",
    "fakeredis>=2.23",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus_orchestration"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
